# prisoners-dilemma-2d

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  WASM_API_DOCUMENTATION.md  biome.json  biome.jsonc  package.json  specification_doc.md  vite.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml  pr-auto-approve.yaml
doc/: WASM_API_DOCUMENTATION.md  specification_doc.md
examples/: strategy_demo.rs
src/: agent.rs  game.rs  genetic.rs  grid.rs  lib.rs  wasm_bindings.rs
src/application/: battle.rs  evolution.rs  mod.rs  simulation.rs
src/core/: entities.rs  genetic.rs  grid.rs  mod.rs  repositories.rs  services.rs  strategies.rs  value_objects.rs
src/domain/: errors.rs  mod.rs
src/evolution/: algorithms.rs  metrics.rs  mod.rs  operators.rs  strategies.rs
src/infrastructure/: mod.rs  persistence.rs  (+2 more)
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
wasm/src/application/: mod.rs
wasm/src/application/evolution/: mod.rs  selection.rs  service.rs
wasm/src/application/simulation/: config.rs  mod.rs  service.rs  statistics.rs
wasm/src/domain/: mod.rs
wasm/src/domain/agent/: entity.rs  mod.rs  movement_strategy.rs  position.rs  strategy.rs
wasm/src/domain/game/: mod.rs  payoff.rs  service.rs
wasm/src/domain/grid/: entity.rs  mod.rs  service.rs
wasm/src/infrastructure/: mod.rs
wasm/src/infrastructure/wasm_bindings/: mod.rs  simulation.rs  types.rs  utils.rs
web/: README.md  biome.jsonc  components.json  index.html  package.json  remix.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
(+123 files in other folders)
