[package]
name = "prisoners_dilemma_2d"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
thiserror = "2.0.12"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "js", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dependencies.wasm-bindgen-futures]
version = "0.4"